# dotnet-machette

./: Cargo.toml  build.rs
assets/: Microsoft.Build.CommonTypes.xsd  Microsoft.Build.Core.xsd
src/: main.rs  project.rs  ser.rs
