[package]
name = "dotnet-machette"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
wax = "0.6.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

[build-dependencies]
xsd-parser = { git = "https://github.com/Bergmann89/xsd-parser" }
